added stosa submission notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 src/STOSA/.DS_Store
 .idea/
 src/.ipynb_checkpoints/
-src/models/stochastic_self_attention_model/.DS_Store
+src/models/STOSA/.DS_Store
+.DS_Store
